# E-Wallet

./: .env  config.json  main.py  models.py  pyproject.toml  schema.py  uitls.py
alembic/versions/: 01ae358aa8c3_test.py  074855b29f70_test.py  0e830c78ac66_test.py  0f5d24ca5153_test.py  1b935a68680d_test.py  2493db2ef943_test1.py  2a892ef32a65_test.py  3110203451e2_test.py  355a024e12aa_test.py  37817587513c_test.py  4f96425c8071_test.py  6855a19edd52_test.py  76781c281c0d_test.py  76f447ca787d_test.py  785de67873d3_test.py  8a1964527306_test.py  9c522a8ba7f7_test.py  add18a3de3e2_test.py  b3df8bc88889_test1.py  c727c3d2d7f2_test.py  cadcde749130_test.py  cb8dd41d3be5_test1.py  dbab1d1543a0_test.py  dcb087b8a912_test1.py  dd8e8c4d3377_test1.py  deff6f72d786_test1.py  e12e71554d91_test.py  e5633c49282c_test1.py  ef36efb8d388_test1.py
api/: endpoints.py
config/: configuration.py
